syntax = "proto3";

package greet;

service GreetService{
    // unary API 
    rpc Greet (GreetRequest) returns (GreetResponse) {};

    // streaming
    rpc GreetManyTimes (GreetManyTimesRequest) returns (stream GreetManyTimesResponse) {};
}

message Greeting {
    string first_name = 1;
    string last_name = 2;
}

message GreetRequest {
    Greeting greeting = 1;
}
message GreetResponse {
    string result = 1;
}
